--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: SRestaurant-cs_development
-
+  database: 5th-Floor_development
+ 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: SRestaurant-cs
+  #username: 5th-Floor
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: SRestaurant-cs_test
+  database: 5th-Floor_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: SRestaurant-cs_production
-  username: SRestaurant-cs
-  password: <%= ENV['SRESTAURANT-CS_DATABASE_PASSWORD'] %>
+  database: 5th-Floor_production
+  username: 5th-Floor
+  password: <%= ENV['5TH-FLOOR_DATABASE_PASSWORD'] %>
